# geneticAlgorithm

./: README.md  pyproject.toml
bf2/: crossover.py  elitism_function.py  fitness_function.py  genetic_algorithm.py  main.py  mutation.py  population.py  print_result.py  print_table.py  rank_selection.py
bf2/bf2_package/: mutation.py
cb3/: crossover.py  fitness_function.py  genetic_algorithm.py  main.py  mutation.py  population.py  print_result.py  print_table.py
